// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Popover component should match snapshots 1`] = `
<DocumentFragment>
  .Button-module__button___AbcpN {
  align-items: center;
  border-radius: 4px;
  box-sizing: border-box;
  cursor: pointer;
  display: flex;
  font-weight: 700;
  justify-content: center;
  transition: all .2s ease-in-out;
}

.Button-module__button-default___miWV3 {
  color: var(--qtm-colors-neutral-0);
}

.Button-module__button-default-primary___bURr2 {
  background-color: var(--qtm-colors-primary-700);
  border: 2px solid var(--qtm-colors-primary-700);
}

.Button-module__button-icon___c2VCp {
  pointer-events: none;
}

.Button-module__button-icon-medium___ppo2m,
.Button-module__button-icon-small___m8db9,
.Button-module__button-icon-xsmall___prEKP {
  width: calc(var(--qtm-base-font-size)*1.5);
}

.Button-module__button-medium___qo6Ym,
.Button-module__button-small___HWutw {
  padding: var(--qtm-spacing-xxsmall) var(--qtm-spacing-medium);
}

.Button-module__button-medium___qo6Ym {
  font-size: var(--qtm-base-font-size);
  line-height: calc(var(--qtm-base-font-size)*1.5);
  min-height: var(--qtm-spacing-xxlarge);
}

.Button-module__shadow-2-neutral-500___hxqSk {
  --qtm-shadow-umbra-neutral-500-color: rgba(153,153,153,var(--qtm-shadow-umbra-opacity));
  --qtm-shadow-penumbra-neutral-500-color: rgba(153,153,153,var(--qtm-shadow-penumbra-opacity));
  --qtm-shadow-ambient-neutral-500-color: rgba(153,153,153,var(--qtm-shadow-ambient-opacity));
  box-shadow: 0 3px 1px -2px var(--qtm-shadow-umbra-neutral-500-color),0 2px 2px 0 var(--qtm-shadow-penumbra-neutral-500-color),0 1px 5px 0 var(--qtm-shadow-ambient-neutral-500-color);
}

.Button-module__icon-button___gjVoG {
  background-color: transparent;
  border: none;
  border-radius: 50%;
  box-shadow: none;
  color: hsla(0,0%,60%,.5);
  outline: none;
  width: 40px;
}

.c1 {
  box-shadow: 0px 3px 5px -1px rgba(66,66,66,0.2),0px 5px 8px 0px rgba(66,66,66,0.14),0px 1px 14px 0px rgba(66,66,66,0.12);
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  border-radius: 4px;
  font-size: 16px;
  width: -webkit-max-content;
  width: -moz-max-content;
  width: max-content;
  padding: 8px;
  position: absolute;
  top: -15px;
  left: 50%;
  -webkit-transform: translate(-50%,-100%);
  -ms-transform: translate(-50%,-100%);
  transform: translate(-50%,-100%);
  line-height: 0;
  -webkit-transition: opacity 0.2s ease-in-out,visibility 0.2s ease-in-out;
  transition: opacity 0.2s ease-in-out,visibility 0.2s ease-in-out;
  z-index: 100;
  background-color: #ffffff;
  color: #424242;
}

.c1:before {
  color: #ffffff;
  font-size: 16px;
  position: absolute;
  content: '▼';
  left: 50%;
  text-shadow: 0px 8px 4px rgba(66,66,66,0.2);
  bottom: 0;
  -webkit-transform: translateX(-50%);
  -ms-transform: translateX(-50%);
  transform: translateX(-50%);
}

.c2 {
  color: #424242;
  display: inherit;
  height: auto;
  margin-left: 16px;
  min-height: auto;
  opacity: 0.8;
  padding: 0;
  -webkit-transition: opacity 0.4s ease;
  transition: opacity 0.4s ease;
  width: auto;
}

.c2:hover {
  background: none;
  opacity: 1;
  color: #424242;
}

.c0 {
  display: inline-block;
  position: relative;
}

.c3 {
  cursor: pointer;
}

<div
    class="c0"
  >
    <div
      class="c1"
    >
      <div
        class=""
      >
        This is a hint
      </div>
      <button
        class="Button-module__button___AbcpN Button-module__button-medium___qo6Ym Button-module__button-default___miWV3 Button-module__button-default-primary___bURr2 Button-module__shadow-2-neutral-500___hxqSk Button-module__shadow-4-primary-900___HdA30 Button-module__shadow-4-primary-700___Gs4yK Button-module__shadow-8-primary-900___f0GvH Button-module__icon-button___gjVoG c2"
        type="button"
      >
        <svg
          aria-hidden="true"
          class="MuiSvgIcon-root MuiSvgIcon-fontSizeMedium Button-module__button-icon___c2VCp Button-module__button-icon-medium___ppo2m css-1696fkf-MuiSvgIcon-root"
          data-qtm-preloader="icon"
          data-testid="CloseIcon"
          focusable="false"
          style="font-size: 24px; max-width: 24px;"
          viewBox="0 0 24 24"
        >
          <path
            d="M19 6.41 17.59 5 12 10.59 6.41 5 5 6.41 10.59 12 5 17.59 6.41 19 12 13.41 17.59 19 19 17.59 13.41 12z"
          />
        </svg>
      </button>
    </div>
    <div
      class="c3"
    >
      <button
        type="button"
      >
        popover here
      </button>
    </div>
  </div>
</DocumentFragment>
`;

exports[`Popover component should match snapshots 2`] = `
<DocumentFragment>
  .Button-module__button___AbcpN {
  align-items: center;
  border-radius: 4px;
  box-sizing: border-box;
  cursor: pointer;
  display: flex;
  font-weight: 700;
  justify-content: center;
  transition: all .2s ease-in-out;
}

.Button-module__button-default___miWV3 {
  color: var(--qtm-colors-neutral-0);
}

.Button-module__button-default-primary___bURr2 {
  background-color: var(--qtm-colors-primary-700);
  border: 2px solid var(--qtm-colors-primary-700);
}

.Button-module__button-icon___c2VCp {
  pointer-events: none;
}

.Button-module__button-icon-medium___ppo2m,
.Button-module__button-icon-small___m8db9,
.Button-module__button-icon-xsmall___prEKP {
  width: calc(var(--qtm-base-font-size)*1.5);
}

.Button-module__button-medium___qo6Ym,
.Button-module__button-small___HWutw {
  padding: var(--qtm-spacing-xxsmall) var(--qtm-spacing-medium);
}

.Button-module__button-medium___qo6Ym {
  font-size: var(--qtm-base-font-size);
  line-height: calc(var(--qtm-base-font-size)*1.5);
  min-height: var(--qtm-spacing-xxlarge);
}

.Button-module__shadow-2-neutral-500___hxqSk {
  --qtm-shadow-umbra-neutral-500-color: rgba(153,153,153,var(--qtm-shadow-umbra-opacity));
  --qtm-shadow-penumbra-neutral-500-color: rgba(153,153,153,var(--qtm-shadow-penumbra-opacity));
  --qtm-shadow-ambient-neutral-500-color: rgba(153,153,153,var(--qtm-shadow-ambient-opacity));
  box-shadow: 0 3px 1px -2px var(--qtm-shadow-umbra-neutral-500-color),0 2px 2px 0 var(--qtm-shadow-penumbra-neutral-500-color),0 1px 5px 0 var(--qtm-shadow-ambient-neutral-500-color);
}

.Button-module__icon-button___gjVoG {
  background-color: transparent;
  border: none;
  border-radius: 50%;
  box-shadow: none;
  color: hsla(0,0%,60%,.5);
  outline: none;
  width: 40px;
}

.c1 {
  box-shadow: 0px 3px 5px -1px rgba(66,66,66,0.2),0px 5px 8px 0px rgba(66,66,66,0.14),0px 1px 14px 0px rgba(66,66,66,0.12);
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  border-radius: 4px;
  font-size: 16px;
  width: -webkit-max-content;
  width: -moz-max-content;
  width: max-content;
  padding: 8px;
  position: absolute;
  top: -15px;
  left: 50%;
  -webkit-transform: translate(-50%,-100%);
  -ms-transform: translate(-50%,-100%);
  transform: translate(-50%,-100%);
  line-height: 0;
  -webkit-transition: opacity 0.2s ease-in-out,visibility 0.2s ease-in-out;
  transition: opacity 0.2s ease-in-out,visibility 0.2s ease-in-out;
  z-index: 100;
  background-color: #ffffff;
  color: #424242;
}

.c1:before {
  color: #ffffff;
  font-size: 16px;
  position: absolute;
  content: '▼';
  left: 50%;
  text-shadow: 0px 8px 4px rgba(66,66,66,0.2);
  bottom: 0;
  -webkit-transform: translateX(-50%);
  -ms-transform: translateX(-50%);
  transform: translateX(-50%);
}

.c2 {
  color: #424242;
  display: inherit;
  height: auto;
  margin-left: 16px;
  min-height: auto;
  opacity: 0.8;
  padding: 0;
  -webkit-transition: opacity 0.4s ease;
  transition: opacity 0.4s ease;
  width: auto;
}

.c2:hover {
  background: none;
  opacity: 1;
  color: #424242;
}

.c0 {
  display: inline-block;
  position: relative;
}

.c3 {
  cursor: pointer;
}

<div
    class="c0"
  >
    <div
      class="c1"
    >
      <div
        class=""
      >
        This is a hint
      </div>
      <button
        class="Button-module__button___AbcpN Button-module__button-medium___qo6Ym Button-module__button-default___miWV3 Button-module__button-default-primary___bURr2 Button-module__shadow-2-neutral-500___hxqSk Button-module__shadow-4-primary-900___HdA30 Button-module__shadow-4-primary-700___Gs4yK Button-module__shadow-8-primary-900___f0GvH Button-module__icon-button___gjVoG c2"
        type="button"
      >
        <svg
          aria-hidden="true"
          class="MuiSvgIcon-root MuiSvgIcon-fontSizeMedium Button-module__button-icon___c2VCp Button-module__button-icon-medium___ppo2m css-1696fkf-MuiSvgIcon-root"
          data-qtm-preloader="icon"
          data-testid="CloseIcon"
          focusable="false"
          style="font-size: 24px; max-width: 24px;"
          viewBox="0 0 24 24"
        >
          <path
            d="M19 6.41 17.59 5 12 10.59 6.41 5 5 6.41 10.59 12 5 17.59 6.41 19 12 13.41 17.59 19 19 17.59 13.41 12z"
          />
        </svg>
      </button>
    </div>
    <div
      class="c3"
    >
      <button
        type="button"
      >
        popover here
      </button>
    </div>
  </div>
</DocumentFragment>
`;

exports[`Popover component should match snapshots 3`] = `
<DocumentFragment>
  .Button-module__button___AbcpN {
  align-items: center;
  border-radius: 4px;
  box-sizing: border-box;
  cursor: pointer;
  display: flex;
  font-weight: 700;
  justify-content: center;
  transition: all .2s ease-in-out;
}

.Button-module__button-default___miWV3 {
  color: var(--qtm-colors-neutral-0);
}

.Button-module__button-default-primary___bURr2 {
  background-color: var(--qtm-colors-primary-700);
  border: 2px solid var(--qtm-colors-primary-700);
}

.Button-module__button-icon___c2VCp {
  pointer-events: none;
}

.Button-module__button-icon-medium___ppo2m,
.Button-module__button-icon-small___m8db9,
.Button-module__button-icon-xsmall___prEKP {
  width: calc(var(--qtm-base-font-size)*1.5);
}

.Button-module__button-medium___qo6Ym,
.Button-module__button-small___HWutw {
  padding: var(--qtm-spacing-xxsmall) var(--qtm-spacing-medium);
}

.Button-module__button-medium___qo6Ym {
  font-size: var(--qtm-base-font-size);
  line-height: calc(var(--qtm-base-font-size)*1.5);
  min-height: var(--qtm-spacing-xxlarge);
}

.Button-module__shadow-2-neutral-500___hxqSk {
  --qtm-shadow-umbra-neutral-500-color: rgba(153,153,153,var(--qtm-shadow-umbra-opacity));
  --qtm-shadow-penumbra-neutral-500-color: rgba(153,153,153,var(--qtm-shadow-penumbra-opacity));
  --qtm-shadow-ambient-neutral-500-color: rgba(153,153,153,var(--qtm-shadow-ambient-opacity));
  box-shadow: 0 3px 1px -2px var(--qtm-shadow-umbra-neutral-500-color),0 2px 2px 0 var(--qtm-shadow-penumbra-neutral-500-color),0 1px 5px 0 var(--qtm-shadow-ambient-neutral-500-color);
}

.Button-module__icon-button___gjVoG {
  background-color: transparent;
  border: none;
  border-radius: 50%;
  box-shadow: none;
  color: hsla(0,0%,60%,.5);
  outline: none;
  width: 40px;
}

.c1 {
  box-shadow: 0px 3px 5px -1px rgba(66,66,66,0.2),0px 5px 8px 0px rgba(66,66,66,0.14),0px 1px 14px 0px rgba(66,66,66,0.12);
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  border-radius: 4px;
  font-size: 16px;
  width: -webkit-max-content;
  width: -moz-max-content;
  width: max-content;
  padding: 8px;
  position: absolute;
  top: -15px;
  left: 50%;
  -webkit-transform: translate(-50%,-100%);
  -ms-transform: translate(-50%,-100%);
  transform: translate(-50%,-100%);
  line-height: 0;
  -webkit-transition: opacity 0.2s ease-in-out,visibility 0.2s ease-in-out;
  transition: opacity 0.2s ease-in-out,visibility 0.2s ease-in-out;
  z-index: 100;
  background-color: #dcedc8;
  color: #004D40;
}

.c1:before {
  color: #dcedc8;
  font-size: 16px;
  position: absolute;
  content: '▼';
  left: 50%;
  text-shadow: 0px 8px 4px rgba(66,66,66,0.2);
  bottom: 0;
  -webkit-transform: translateX(-50%);
  -ms-transform: translateX(-50%);
  transform: translateX(-50%);
}

.c2 {
  color: #004D40;
  display: inherit;
  height: auto;
  margin-left: 16px;
  min-height: auto;
  opacity: 0.8;
  padding: 0;
  -webkit-transition: opacity 0.4s ease;
  transition: opacity 0.4s ease;
  width: auto;
}

.c2:hover {
  background: none;
  opacity: 1;
  color: #004D40;
}

.c0 {
  display: inline-block;
  position: relative;
}

.c3 {
  cursor: pointer;
}

<div
    class="c0"
  >
    <div
      class="c1"
    >
      <div
        class=""
      >
        This is a hint
      </div>
      <button
        class="Button-module__button___AbcpN Button-module__button-medium___qo6Ym Button-module__button-default___miWV3 Button-module__button-default-primary___bURr2 Button-module__shadow-2-neutral-500___hxqSk Button-module__shadow-4-primary-900___HdA30 Button-module__shadow-4-primary-700___Gs4yK Button-module__shadow-8-primary-900___f0GvH Button-module__icon-button___gjVoG c2"
        type="button"
      >
        <svg
          aria-hidden="true"
          class="MuiSvgIcon-root MuiSvgIcon-fontSizeMedium Button-module__button-icon___c2VCp Button-module__button-icon-medium___ppo2m css-1696fkf-MuiSvgIcon-root"
          data-qtm-preloader="icon"
          data-testid="CloseIcon"
          focusable="false"
          style="font-size: 24px; max-width: 24px;"
          viewBox="0 0 24 24"
        >
          <path
            d="M19 6.41 17.59 5 12 10.59 6.41 5 5 6.41 10.59 12 5 17.59 6.41 19 12 13.41 17.59 19 19 17.59 13.41 12z"
          />
        </svg>
      </button>
    </div>
    <div
      class="c3"
    >
      <button
        type="button"
      >
        popover here
      </button>
    </div>
  </div>
</DocumentFragment>
`;

exports[`Popover component should match snapshots 4`] = `
<DocumentFragment>
  .Button-module__button___AbcpN {
  align-items: center;
  border-radius: 4px;
  box-sizing: border-box;
  cursor: pointer;
  display: flex;
  font-weight: 700;
  justify-content: center;
  transition: all .2s ease-in-out;
}

.Button-module__button-default___miWV3 {
  color: var(--qtm-colors-neutral-0);
}

.Button-module__button-default-primary___bURr2 {
  background-color: var(--qtm-colors-primary-700);
  border: 2px solid var(--qtm-colors-primary-700);
}

.Button-module__button-icon___c2VCp {
  pointer-events: none;
}

.Button-module__button-icon-medium___ppo2m,
.Button-module__button-icon-small___m8db9,
.Button-module__button-icon-xsmall___prEKP {
  width: calc(var(--qtm-base-font-size)*1.5);
}

.Button-module__button-medium___qo6Ym,
.Button-module__button-small___HWutw {
  padding: var(--qtm-spacing-xxsmall) var(--qtm-spacing-medium);
}

.Button-module__button-medium___qo6Ym {
  font-size: var(--qtm-base-font-size);
  line-height: calc(var(--qtm-base-font-size)*1.5);
  min-height: var(--qtm-spacing-xxlarge);
}

.Button-module__shadow-2-neutral-500___hxqSk {
  --qtm-shadow-umbra-neutral-500-color: rgba(153,153,153,var(--qtm-shadow-umbra-opacity));
  --qtm-shadow-penumbra-neutral-500-color: rgba(153,153,153,var(--qtm-shadow-penumbra-opacity));
  --qtm-shadow-ambient-neutral-500-color: rgba(153,153,153,var(--qtm-shadow-ambient-opacity));
  box-shadow: 0 3px 1px -2px var(--qtm-shadow-umbra-neutral-500-color),0 2px 2px 0 var(--qtm-shadow-penumbra-neutral-500-color),0 1px 5px 0 var(--qtm-shadow-ambient-neutral-500-color);
}

.Button-module__icon-button___gjVoG {
  background-color: transparent;
  border: none;
  border-radius: 50%;
  box-shadow: none;
  color: hsla(0,0%,60%,.5);
  outline: none;
  width: 40px;
}

.c1 {
  box-shadow: 0px 3px 5px -1px rgba(66,66,66,0.2),0px 5px 8px 0px rgba(66,66,66,0.14),0px 1px 14px 0px rgba(66,66,66,0.12);
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  border-radius: 4px;
  font-size: 16px;
  width: -webkit-max-content;
  width: -moz-max-content;
  width: max-content;
  padding: 8px;
  position: absolute;
  top: -15px;
  left: 50%;
  -webkit-transform: translate(-50%,-100%);
  -ms-transform: translate(-50%,-100%);
  transform: translate(-50%,-100%);
  line-height: 0;
  -webkit-transition: opacity 0.2s ease-in-out,visibility 0.2s ease-in-out;
  transition: opacity 0.2s ease-in-out,visibility 0.2s ease-in-out;
  z-index: 100;
  background-color: #ffefd6;
  color: #424242;
}

.c1:before {
  color: #ffefd6;
  font-size: 16px;
  position: absolute;
  content: '▼';
  left: 50%;
  text-shadow: 0px 8px 4px rgba(66,66,66,0.2);
  bottom: 0;
  -webkit-transform: translateX(-50%);
  -ms-transform: translateX(-50%);
  transform: translateX(-50%);
}

.c2 {
  color: #424242;
  display: inherit;
  height: auto;
  margin-left: 16px;
  min-height: auto;
  opacity: 0.8;
  padding: 0;
  -webkit-transition: opacity 0.4s ease;
  transition: opacity 0.4s ease;
  width: auto;
}

.c2:hover {
  background: none;
  opacity: 1;
  color: #424242;
}

.c0 {
  display: inline-block;
  position: relative;
}

.c3 {
  cursor: pointer;
}

<div
    class="c0"
  >
    <div
      class="c1"
    >
      <div
        class=""
      >
        This is a hint
      </div>
      <button
        class="Button-module__button___AbcpN Button-module__button-medium___qo6Ym Button-module__button-default___miWV3 Button-module__button-default-primary___bURr2 Button-module__shadow-2-neutral-500___hxqSk Button-module__shadow-4-primary-900___HdA30 Button-module__shadow-4-primary-700___Gs4yK Button-module__shadow-8-primary-900___f0GvH Button-module__icon-button___gjVoG c2"
        type="button"
      >
        <svg
          aria-hidden="true"
          class="MuiSvgIcon-root MuiSvgIcon-fontSizeMedium Button-module__button-icon___c2VCp Button-module__button-icon-medium___ppo2m css-1696fkf-MuiSvgIcon-root"
          data-qtm-preloader="icon"
          data-testid="CloseIcon"
          focusable="false"
          style="font-size: 24px; max-width: 24px;"
          viewBox="0 0 24 24"
        >
          <path
            d="M19 6.41 17.59 5 12 10.59 6.41 5 5 6.41 10.59 12 5 17.59 6.41 19 12 13.41 17.59 19 19 17.59 13.41 12z"
          />
        </svg>
      </button>
    </div>
    <div
      class="c3"
    >
      <button
        type="button"
      >
        popover here
      </button>
    </div>
  </div>
</DocumentFragment>
`;

exports[`Popover component should match snapshots 5`] = `
<DocumentFragment>
  .Button-module__button___AbcpN {
  align-items: center;
  border-radius: 4px;
  box-sizing: border-box;
  cursor: pointer;
  display: flex;
  font-weight: 700;
  justify-content: center;
  transition: all .2s ease-in-out;
}

.Button-module__button-default___miWV3 {
  color: var(--qtm-colors-neutral-0);
}

.Button-module__button-default-primary___bURr2 {
  background-color: var(--qtm-colors-primary-700);
  border: 2px solid var(--qtm-colors-primary-700);
}

.Button-module__button-icon___c2VCp {
  pointer-events: none;
}

.Button-module__button-icon-medium___ppo2m,
.Button-module__button-icon-small___m8db9,
.Button-module__button-icon-xsmall___prEKP {
  width: calc(var(--qtm-base-font-size)*1.5);
}

.Button-module__button-medium___qo6Ym,
.Button-module__button-small___HWutw {
  padding: var(--qtm-spacing-xxsmall) var(--qtm-spacing-medium);
}

.Button-module__button-medium___qo6Ym {
  font-size: var(--qtm-base-font-size);
  line-height: calc(var(--qtm-base-font-size)*1.5);
  min-height: var(--qtm-spacing-xxlarge);
}

.Button-module__shadow-2-neutral-500___hxqSk {
  --qtm-shadow-umbra-neutral-500-color: rgba(153,153,153,var(--qtm-shadow-umbra-opacity));
  --qtm-shadow-penumbra-neutral-500-color: rgba(153,153,153,var(--qtm-shadow-penumbra-opacity));
  --qtm-shadow-ambient-neutral-500-color: rgba(153,153,153,var(--qtm-shadow-ambient-opacity));
  box-shadow: 0 3px 1px -2px var(--qtm-shadow-umbra-neutral-500-color),0 2px 2px 0 var(--qtm-shadow-penumbra-neutral-500-color),0 1px 5px 0 var(--qtm-shadow-ambient-neutral-500-color);
}

.Button-module__icon-button___gjVoG {
  background-color: transparent;
  border: none;
  border-radius: 50%;
  box-shadow: none;
  color: hsla(0,0%,60%,.5);
  outline: none;
  width: 40px;
}

.c1 {
  box-shadow: 0px 3px 5px -1px rgba(66,66,66,0.2),0px 5px 8px 0px rgba(66,66,66,0.14),0px 1px 14px 0px rgba(66,66,66,0.12);
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  border-radius: 4px;
  font-size: 16px;
  width: -webkit-max-content;
  width: -moz-max-content;
  width: max-content;
  padding: 8px;
  position: absolute;
  top: -15px;
  left: 50%;
  -webkit-transform: translate(-50%,-100%);
  -ms-transform: translate(-50%,-100%);
  transform: translate(-50%,-100%);
  line-height: 0;
  -webkit-transition: opacity 0.2s ease-in-out,visibility 0.2s ease-in-out;
  transition: opacity 0.2s ease-in-out,visibility 0.2s ease-in-out;
  z-index: 100;
  background-color: #fff5f5;
  color: #424242;
}

.c1:before {
  color: #fff5f5;
  font-size: 16px;
  position: absolute;
  content: '▼';
  left: 50%;
  text-shadow: 0px 8px 4px rgba(66,66,66,0.2);
  bottom: 0;
  -webkit-transform: translateX(-50%);
  -ms-transform: translateX(-50%);
  transform: translateX(-50%);
}

.c2 {
  color: #424242;
  display: inherit;
  height: auto;
  margin-left: 16px;
  min-height: auto;
  opacity: 0.8;
  padding: 0;
  -webkit-transition: opacity 0.4s ease;
  transition: opacity 0.4s ease;
  width: auto;
}

.c2:hover {
  background: none;
  opacity: 1;
  color: #424242;
}

.c0 {
  display: inline-block;
  position: relative;
}

.c3 {
  cursor: pointer;
}

<div
    class="c0"
  >
    <div
      class="c1"
    >
      <div
        class=""
      >
        This is a hint
      </div>
      <button
        class="Button-module__button___AbcpN Button-module__button-medium___qo6Ym Button-module__button-default___miWV3 Button-module__button-default-primary___bURr2 Button-module__shadow-2-neutral-500___hxqSk Button-module__shadow-4-primary-900___HdA30 Button-module__shadow-4-primary-700___Gs4yK Button-module__shadow-8-primary-900___f0GvH Button-module__icon-button___gjVoG c2"
        type="button"
      >
        <svg
          aria-hidden="true"
          class="MuiSvgIcon-root MuiSvgIcon-fontSizeMedium Button-module__button-icon___c2VCp Button-module__button-icon-medium___ppo2m css-1696fkf-MuiSvgIcon-root"
          data-qtm-preloader="icon"
          data-testid="CloseIcon"
          focusable="false"
          style="font-size: 24px; max-width: 24px;"
          viewBox="0 0 24 24"
        >
          <path
            d="M19 6.41 17.59 5 12 10.59 6.41 5 5 6.41 10.59 12 5 17.59 6.41 19 12 13.41 17.59 19 19 17.59 13.41 12z"
          />
        </svg>
      </button>
    </div>
    <div
      class="c3"
    >
      <button
        type="button"
      >
        popover here
      </button>
    </div>
  </div>
</DocumentFragment>
`;

exports[`Popover component should match snapshots 6`] = `
<DocumentFragment>
  .Button-module__button___AbcpN {
  align-items: center;
  border-radius: 4px;
  box-sizing: border-box;
  cursor: pointer;
  display: flex;
  font-weight: 700;
  justify-content: center;
  transition: all .2s ease-in-out;
}

.Button-module__button-default___miWV3 {
  color: var(--qtm-colors-neutral-0);
}

.Button-module__button-default-primary___bURr2 {
  background-color: var(--qtm-colors-primary-700);
  border: 2px solid var(--qtm-colors-primary-700);
}

.Button-module__button-icon___c2VCp {
  pointer-events: none;
}

.Button-module__button-icon-medium___ppo2m,
.Button-module__button-icon-small___m8db9,
.Button-module__button-icon-xsmall___prEKP {
  width: calc(var(--qtm-base-font-size)*1.5);
}

.Button-module__button-medium___qo6Ym,
.Button-module__button-small___HWutw {
  padding: var(--qtm-spacing-xxsmall) var(--qtm-spacing-medium);
}

.Button-module__button-medium___qo6Ym {
  font-size: var(--qtm-base-font-size);
  line-height: calc(var(--qtm-base-font-size)*1.5);
  min-height: var(--qtm-spacing-xxlarge);
}

.Button-module__shadow-2-neutral-500___hxqSk {
  --qtm-shadow-umbra-neutral-500-color: rgba(153,153,153,var(--qtm-shadow-umbra-opacity));
  --qtm-shadow-penumbra-neutral-500-color: rgba(153,153,153,var(--qtm-shadow-penumbra-opacity));
  --qtm-shadow-ambient-neutral-500-color: rgba(153,153,153,var(--qtm-shadow-ambient-opacity));
  box-shadow: 0 3px 1px -2px var(--qtm-shadow-umbra-neutral-500-color),0 2px 2px 0 var(--qtm-shadow-penumbra-neutral-500-color),0 1px 5px 0 var(--qtm-shadow-ambient-neutral-500-color);
}

.Button-module__icon-button___gjVoG {
  background-color: transparent;
  border: none;
  border-radius: 50%;
  box-shadow: none;
  color: hsla(0,0%,60%,.5);
  outline: none;
  width: 40px;
}

.c1 {
  box-shadow: 0px 3px 5px -1px rgba(66,66,66,0.2),0px 5px 8px 0px rgba(66,66,66,0.14),0px 1px 14px 0px rgba(66,66,66,0.12);
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  border-radius: 4px;
  font-size: 16px;
  width: -webkit-max-content;
  width: -moz-max-content;
  width: max-content;
  padding: 8px;
  position: absolute;
  bottom: -15px;
  left: 50%;
  -webkit-transform: translate(-50%,100%);
  -ms-transform: translate(-50%,100%);
  transform: translate(-50%,100%);
  line-height: 0;
  -webkit-transition: opacity 0.2s ease-in-out,visibility 0.2s ease-in-out;
  transition: opacity 0.2s ease-in-out,visibility 0.2s ease-in-out;
  z-index: 100;
  background-color: #ffffff;
  color: #424242;
}

.c1:before {
  color: #ffffff;
  font-size: 16px;
  position: absolute;
  top: -4px;
  content: '▲';
  left: 50%;
  text-shadow: 0px -3px 4px rgba(66,66,66,0.2);
  -webkit-transform: translateX(-50%);
  -ms-transform: translateX(-50%);
  transform: translateX(-50%);
}

.c2 {
  color: #424242;
  display: inherit;
  height: auto;
  margin-left: 16px;
  min-height: auto;
  opacity: 0.8;
  padding: 0;
  -webkit-transition: opacity 0.4s ease;
  transition: opacity 0.4s ease;
  width: auto;
}

.c2:hover {
  background: none;
  opacity: 1;
  color: #424242;
}

.c0 {
  display: inline-block;
  position: relative;
}

.c3 {
  cursor: pointer;
}

<div
    class="c0"
  >
    <div
      class="c1"
    >
      <div
        class=""
      >
        This is a hint
      </div>
      <button
        class="Button-module__button___AbcpN Button-module__button-medium___qo6Ym Button-module__button-default___miWV3 Button-module__button-default-primary___bURr2 Button-module__shadow-2-neutral-500___hxqSk Button-module__shadow-4-primary-900___HdA30 Button-module__shadow-4-primary-700___Gs4yK Button-module__shadow-8-primary-900___f0GvH Button-module__icon-button___gjVoG c2"
        type="button"
      >
        <svg
          aria-hidden="true"
          class="MuiSvgIcon-root MuiSvgIcon-fontSizeMedium Button-module__button-icon___c2VCp Button-module__button-icon-medium___ppo2m css-1696fkf-MuiSvgIcon-root"
          data-qtm-preloader="icon"
          data-testid="CloseIcon"
          focusable="false"
          style="font-size: 24px; max-width: 24px;"
          viewBox="0 0 24 24"
        >
          <path
            d="M19 6.41 17.59 5 12 10.59 6.41 5 5 6.41 10.59 12 5 17.59 6.41 19 12 13.41 17.59 19 19 17.59 13.41 12z"
          />
        </svg>
      </button>
    </div>
    <div
      class="c3"
    >
      <button
        type="button"
      >
        popover here
      </button>
    </div>
  </div>
</DocumentFragment>
`;

exports[`Popover component should match snapshots 7`] = `
<DocumentFragment>
  .Button-module__button___AbcpN {
  align-items: center;
  border-radius: 4px;
  box-sizing: border-box;
  cursor: pointer;
  display: flex;
  font-weight: 700;
  justify-content: center;
  transition: all .2s ease-in-out;
}

.Button-module__button-default___miWV3 {
  color: var(--qtm-colors-neutral-0);
}

.Button-module__button-default-primary___bURr2 {
  background-color: var(--qtm-colors-primary-700);
  border: 2px solid var(--qtm-colors-primary-700);
}

.Button-module__button-icon___c2VCp {
  pointer-events: none;
}

.Button-module__button-icon-medium___ppo2m,
.Button-module__button-icon-small___m8db9,
.Button-module__button-icon-xsmall___prEKP {
  width: calc(var(--qtm-base-font-size)*1.5);
}

.Button-module__button-medium___qo6Ym,
.Button-module__button-small___HWutw {
  padding: var(--qtm-spacing-xxsmall) var(--qtm-spacing-medium);
}

.Button-module__button-medium___qo6Ym {
  font-size: var(--qtm-base-font-size);
  line-height: calc(var(--qtm-base-font-size)*1.5);
  min-height: var(--qtm-spacing-xxlarge);
}

.Button-module__shadow-2-neutral-500___hxqSk {
  --qtm-shadow-umbra-neutral-500-color: rgba(153,153,153,var(--qtm-shadow-umbra-opacity));
  --qtm-shadow-penumbra-neutral-500-color: rgba(153,153,153,var(--qtm-shadow-penumbra-opacity));
  --qtm-shadow-ambient-neutral-500-color: rgba(153,153,153,var(--qtm-shadow-ambient-opacity));
  box-shadow: 0 3px 1px -2px var(--qtm-shadow-umbra-neutral-500-color),0 2px 2px 0 var(--qtm-shadow-penumbra-neutral-500-color),0 1px 5px 0 var(--qtm-shadow-ambient-neutral-500-color);
}

.Button-module__icon-button___gjVoG {
  background-color: transparent;
  border: none;
  border-radius: 50%;
  box-shadow: none;
  color: hsla(0,0%,60%,.5);
  outline: none;
  width: 40px;
}

.c1 {
  box-shadow: 0px 3px 5px -1px rgba(66,66,66,0.2),0px 5px 8px 0px rgba(66,66,66,0.14),0px 1px 14px 0px rgba(66,66,66,0.12);
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  border-radius: 4px;
  font-size: 16px;
  width: -webkit-max-content;
  width: -moz-max-content;
  width: max-content;
  padding: 8px;
  position: absolute;
  top: 50%;
  left: -15px;
  -webkit-transform: translate(-100%,-50%);
  -ms-transform: translate(-100%,-50%);
  transform: translate(-100%,-50%);
  line-height: 0;
  -webkit-transition: opacity 0.2s ease-in-out,visibility 0.2s ease-in-out;
  transition: opacity 0.2s ease-in-out,visibility 0.2s ease-in-out;
  z-index: 100;
  background-color: #ffffff;
  color: #424242;
}

.c1:before {
  color: #ffffff;
  font-size: 16px;
  position: absolute;
  bottom: 50%;
  content: '▶';
  right: -8px;
  text-shadow: 4px 1px 4px rgba(66,66,66,0.2);
}

.c2 {
  color: #424242;
  display: inherit;
  height: auto;
  margin-left: 16px;
  min-height: auto;
  opacity: 0.8;
  padding: 0;
  -webkit-transition: opacity 0.4s ease;
  transition: opacity 0.4s ease;
  width: auto;
}

.c2:hover {
  background: none;
  opacity: 1;
  color: #424242;
}

.c0 {
  display: inline-block;
  position: relative;
}

.c3 {
  cursor: pointer;
}

<div
    class="c0"
  >
    <div
      class="c1"
    >
      <div
        class=""
      >
        This is a hint
      </div>
      <button
        class="Button-module__button___AbcpN Button-module__button-medium___qo6Ym Button-module__button-default___miWV3 Button-module__button-default-primary___bURr2 Button-module__shadow-2-neutral-500___hxqSk Button-module__shadow-4-primary-900___HdA30 Button-module__shadow-4-primary-700___Gs4yK Button-module__shadow-8-primary-900___f0GvH Button-module__icon-button___gjVoG c2"
        type="button"
      >
        <svg
          aria-hidden="true"
          class="MuiSvgIcon-root MuiSvgIcon-fontSizeMedium Button-module__button-icon___c2VCp Button-module__button-icon-medium___ppo2m css-1696fkf-MuiSvgIcon-root"
          data-qtm-preloader="icon"
          data-testid="CloseIcon"
          focusable="false"
          style="font-size: 24px; max-width: 24px;"
          viewBox="0 0 24 24"
        >
          <path
            d="M19 6.41 17.59 5 12 10.59 6.41 5 5 6.41 10.59 12 5 17.59 6.41 19 12 13.41 17.59 19 19 17.59 13.41 12z"
          />
        </svg>
      </button>
    </div>
    <div
      class="c3"
    >
      <button
        type="button"
      >
        popover here
      </button>
    </div>
  </div>
</DocumentFragment>
`;

exports[`Popover component should match snapshots 8`] = `
<DocumentFragment>
  .Button-module__button___AbcpN {
  align-items: center;
  border-radius: 4px;
  box-sizing: border-box;
  cursor: pointer;
  display: flex;
  font-weight: 700;
  justify-content: center;
  transition: all .2s ease-in-out;
}

.Button-module__button-default___miWV3 {
  color: var(--qtm-colors-neutral-0);
}

.Button-module__button-default-primary___bURr2 {
  background-color: var(--qtm-colors-primary-700);
  border: 2px solid var(--qtm-colors-primary-700);
}

.Button-module__button-icon___c2VCp {
  pointer-events: none;
}

.Button-module__button-icon-medium___ppo2m,
.Button-module__button-icon-small___m8db9,
.Button-module__button-icon-xsmall___prEKP {
  width: calc(var(--qtm-base-font-size)*1.5);
}

.Button-module__button-medium___qo6Ym,
.Button-module__button-small___HWutw {
  padding: var(--qtm-spacing-xxsmall) var(--qtm-spacing-medium);
}

.Button-module__button-medium___qo6Ym {
  font-size: var(--qtm-base-font-size);
  line-height: calc(var(--qtm-base-font-size)*1.5);
  min-height: var(--qtm-spacing-xxlarge);
}

.Button-module__shadow-2-neutral-500___hxqSk {
  --qtm-shadow-umbra-neutral-500-color: rgba(153,153,153,var(--qtm-shadow-umbra-opacity));
  --qtm-shadow-penumbra-neutral-500-color: rgba(153,153,153,var(--qtm-shadow-penumbra-opacity));
  --qtm-shadow-ambient-neutral-500-color: rgba(153,153,153,var(--qtm-shadow-ambient-opacity));
  box-shadow: 0 3px 1px -2px var(--qtm-shadow-umbra-neutral-500-color),0 2px 2px 0 var(--qtm-shadow-penumbra-neutral-500-color),0 1px 5px 0 var(--qtm-shadow-ambient-neutral-500-color);
}

.Button-module__icon-button___gjVoG {
  background-color: transparent;
  border: none;
  border-radius: 50%;
  box-shadow: none;
  color: hsla(0,0%,60%,.5);
  outline: none;
  width: 40px;
}

.c1 {
  box-shadow: 0px 3px 5px -1px rgba(66,66,66,0.2),0px 5px 8px 0px rgba(66,66,66,0.14),0px 1px 14px 0px rgba(66,66,66,0.12);
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  border-radius: 4px;
  font-size: 16px;
  width: -webkit-max-content;
  width: -moz-max-content;
  width: max-content;
  padding: 8px;
  position: absolute;
  top: 50%;
  right: -15px;
  -webkit-transform: translate(100%,-50%);
  -ms-transform: translate(100%,-50%);
  transform: translate(100%,-50%);
  line-height: 0;
  -webkit-transition: opacity 0.2s ease-in-out,visibility 0.2s ease-in-out;
  transition: opacity 0.2s ease-in-out,visibility 0.2s ease-in-out;
  z-index: 100;
  background-color: #ffffff;
  color: #424242;
}

.c1:before {
  color: #ffffff;
  font-size: 16px;
  position: absolute;
  bottom: 50%;
  content: '◀';
  left: -8px;
  text-shadow: -4px 1px 4px rgba(66,66,66,0.2);
}

.c2 {
  color: #424242;
  display: inherit;
  height: auto;
  margin-left: 16px;
  min-height: auto;
  opacity: 0.8;
  padding: 0;
  -webkit-transition: opacity 0.4s ease;
  transition: opacity 0.4s ease;
  width: auto;
}

.c2:hover {
  background: none;
  opacity: 1;
  color: #424242;
}

.c0 {
  display: inline-block;
  position: relative;
}

.c3 {
  cursor: pointer;
}

<div
    class="c0"
  >
    <div
      class="c1"
    >
      <div
        class=""
      >
        This is a hint
      </div>
      <button
        class="Button-module__button___AbcpN Button-module__button-medium___qo6Ym Button-module__button-default___miWV3 Button-module__button-default-primary___bURr2 Button-module__shadow-2-neutral-500___hxqSk Button-module__shadow-4-primary-900___HdA30 Button-module__shadow-4-primary-700___Gs4yK Button-module__shadow-8-primary-900___f0GvH Button-module__icon-button___gjVoG c2"
        type="button"
      >
        <svg
          aria-hidden="true"
          class="MuiSvgIcon-root MuiSvgIcon-fontSizeMedium Button-module__button-icon___c2VCp Button-module__button-icon-medium___ppo2m css-1696fkf-MuiSvgIcon-root"
          data-qtm-preloader="icon"
          data-testid="CloseIcon"
          focusable="false"
          style="font-size: 24px; max-width: 24px;"
          viewBox="0 0 24 24"
        >
          <path
            d="M19 6.41 17.59 5 12 10.59 6.41 5 5 6.41 10.59 12 5 17.59 6.41 19 12 13.41 17.59 19 19 17.59 13.41 12z"
          />
        </svg>
      </button>
    </div>
    <div
      class="c3"
    >
      <button
        type="button"
      >
        popover here
      </button>
    </div>
  </div>
</DocumentFragment>
`;

exports[`Popover component should match snapshots 9`] = `
<DocumentFragment>
  .Button-module__button___AbcpN {
  align-items: center;
  border-radius: 4px;
  box-sizing: border-box;
  cursor: pointer;
  display: flex;
  font-weight: 700;
  justify-content: center;
  transition: all .2s ease-in-out;
}

.Button-module__button-default___miWV3 {
  color: var(--qtm-colors-neutral-0);
}

.Button-module__button-default-primary___bURr2 {
  background-color: var(--qtm-colors-primary-700);
  border: 2px solid var(--qtm-colors-primary-700);
}

.Button-module__button-icon___c2VCp {
  pointer-events: none;
}

.Button-module__button-icon-medium___ppo2m,
.Button-module__button-icon-small___m8db9,
.Button-module__button-icon-xsmall___prEKP {
  width: calc(var(--qtm-base-font-size)*1.5);
}

.Button-module__button-medium___qo6Ym,
.Button-module__button-small___HWutw {
  padding: var(--qtm-spacing-xxsmall) var(--qtm-spacing-medium);
}

.Button-module__button-medium___qo6Ym {
  font-size: var(--qtm-base-font-size);
  line-height: calc(var(--qtm-base-font-size)*1.5);
  min-height: var(--qtm-spacing-xxlarge);
}

.Button-module__shadow-2-neutral-500___hxqSk {
  --qtm-shadow-umbra-neutral-500-color: rgba(153,153,153,var(--qtm-shadow-umbra-opacity));
  --qtm-shadow-penumbra-neutral-500-color: rgba(153,153,153,var(--qtm-shadow-penumbra-opacity));
  --qtm-shadow-ambient-neutral-500-color: rgba(153,153,153,var(--qtm-shadow-ambient-opacity));
  box-shadow: 0 3px 1px -2px var(--qtm-shadow-umbra-neutral-500-color),0 2px 2px 0 var(--qtm-shadow-penumbra-neutral-500-color),0 1px 5px 0 var(--qtm-shadow-ambient-neutral-500-color);
}

.Button-module__icon-button___gjVoG {
  background-color: transparent;
  border: none;
  border-radius: 50%;
  box-shadow: none;
  color: hsla(0,0%,60%,.5);
  outline: none;
  width: 40px;
}

.c1 {
  box-shadow: 0px 3px 5px -1px rgba(66,66,66,0.2),0px 5px 8px 0px rgba(66,66,66,0.14),0px 1px 14px 0px rgba(66,66,66,0.12);
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  border-radius: 4px;
  font-size: 16px;
  width: -webkit-max-content;
  width: -moz-max-content;
  width: max-content;
  padding: 8px;
  position: absolute;
  top: -15px;
  left: 50%;
  -webkit-transform: translate(-50%,-100%);
  -ms-transform: translate(-50%,-100%);
  transform: translate(-50%,-100%);
  line-height: 0;
  -webkit-transition: opacity 0.2s ease-in-out,visibility 0.2s ease-in-out;
  transition: opacity 0.2s ease-in-out,visibility 0.2s ease-in-out;
  z-index: 100;
  background-color: #424242;
  color: #ffffff;
}

.c1:before {
  color: #424242;
  font-size: 16px;
  position: absolute;
  content: '▼';
  left: 50%;
  text-shadow: 0px 8px 4px rgba(66,66,66,0.2);
  bottom: 0;
  -webkit-transform: translateX(-50%);
  -ms-transform: translateX(-50%);
  transform: translateX(-50%);
}

.c2 {
  color: #ffffff;
  display: inherit;
  height: auto;
  margin-left: 16px;
  min-height: auto;
  opacity: 0.8;
  padding: 0;
  -webkit-transition: opacity 0.4s ease;
  transition: opacity 0.4s ease;
  width: auto;
}

.c2:hover {
  background: none;
  opacity: 1;
  color: #ffffff;
}

.c0 {
  display: inline-block;
  position: relative;
}

.c3 {
  cursor: pointer;
}

<div
    class="c0"
  >
    <div
      class="c1"
    >
      <div
        class=""
      >
        This is a hint
      </div>
      <button
        class="Button-module__button___AbcpN Button-module__button-medium___qo6Ym Button-module__button-default___miWV3 Button-module__button-default-primary___bURr2 Button-module__shadow-2-neutral-500___hxqSk Button-module__shadow-4-primary-900___HdA30 Button-module__shadow-4-primary-700___Gs4yK Button-module__shadow-8-primary-900___f0GvH Button-module__icon-button___gjVoG c2"
        type="button"
      >
        <svg
          aria-hidden="true"
          class="MuiSvgIcon-root MuiSvgIcon-fontSizeMedium Button-module__button-icon___c2VCp Button-module__button-icon-medium___ppo2m css-1696fkf-MuiSvgIcon-root"
          data-qtm-preloader="icon"
          data-testid="CloseIcon"
          focusable="false"
          style="font-size: 24px; max-width: 24px;"
          viewBox="0 0 24 24"
        >
          <path
            d="M19 6.41 17.59 5 12 10.59 6.41 5 5 6.41 10.59 12 5 17.59 6.41 19 12 13.41 17.59 19 19 17.59 13.41 12z"
          />
        </svg>
      </button>
    </div>
    <div
      class="c3"
    >
      <button
        type="button"
      >
        popover here
      </button>
    </div>
  </div>
</DocumentFragment>
`;
